# factory_simulator

./: Cargo.toml  README.md
src/: main.rs
src/opcua_server/: mod.rs  plc1.rs  plc2.rs  scada_client.rs  server.rs
src/simulator/: devices.rs  mod.rs  physics.rs  plant.rs
src/ws_bridge/: bridge.rs  mod.rs
