[package]
name = "water-plant-twin"
version = "0.1.0"
edition = "2021"

[dependencies]
# OPC-UA server and client
opcua = { version = "0.12", features = ["server", "client"] }

# Async runtime
tokio = { version = "1.41", features = ["full"] }

# WebSocket server
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time and date
chrono = "0.4"

# Random for simulation noise
rand = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
